# abaqus_agent

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMUNITY_LAUNCH.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE_INSTRUCTIONS.md  docker-compose.yml  mcp_bridge.py  mcp_server.py  pyproject.toml  requirements.txt  run_benchmark.py  server.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
agent/: __init__.py  llm_planner.py  orchestrator.py
cases/blast_plate/: expected.json  runner.json  spec.yaml
cases/cantilever/: expected.json  runner.json  spec.yaml
core/: __init__.py  helpers.py  pipeline.py  spec_generator.py
docs/: CASE_STUDY_GLY2024.md
frontend/: index.html
post/: __init__.py  extract_kpis.py  upgrade_odb.py
premium/: __init__.py  feature_registry.py  licensing.py
prompts/: failure_analyzer.txt  script_generator.txt  spec_generator.txt
reports/: benchmark_20260306_125243.md
runner/: __init__.py  build_model.py  monitor_job.py  submit_job.py  syntaxcheck.py
schema/: spec_schema.json
tests/: test_core_pipeline.py  test_errors.py  test_mcp_bridge.py  test_mcp_server.py  test_monitor_job.py  test_premium_adaptivity.py  test_premium_autorepair.py  test_premium_coupling.py  test_premium_geometry.py  test_premium_licensing.py  test_premium_parametric.py  test_premium_schema.py  test_real_pipeline.py  test_schema.py  test_static_guard.py
tools/: __init__.py  abaqus_cmd.py  errors.py  schema_validator.py  static_guard.py
(+35 files in other folders)
