[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abaqus-agent"
version = "0.1.0"
description = "LLM-powered automation agent for Abaqus FEA"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Abaqus Agent Contributors" }]
keywords = ["abaqus", "fea", "simulation", "llm", "automation", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
llm = ["anthropic>=0.36", "openai>=1.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1", "httpx>=0.24"]
all = ["abaqus-agent[mcp,llm,dev]"]

[project.scripts]
abaqus-agent = "server:main"

[project.urls]
Homepage = "https://github.com/Tomsabay/abaqus_agent"
Documentation = "https://github.com/Tomsabay/abaqus_agent#readme"
Repository = "https://github.com/Tomsabay/abaqus_agent"
Issues = "https://github.com/Tomsabay/abaqus_agent/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
